--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -2,3 +2,5 @@
 @import "tailwindcss-primeui";
 @import "primeicons/primeicons.css";
 @import "./volt.css";
+
+@custom-variant dark (&:where(.dark, .dark *));
